--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo!</title>
-    <link rel="stylesheet" href="main.css">
-    <script src = "frontend.js" type="text/javascript" charset="UTF-8"></script>
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <script src = "../renderer/frontend.js" type="text/javascript" charset="UTF-8"></script>
 
 </head>
 <body>
